--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-                {
+{
     "private": true,
     "scripts": {
         "dev": "npm run development",
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "chart.js": "^2.8.0",
         "material-design-icons": "^3.0.1",
         "material-icons": "^0.3.1"
     }
